docs: update PROGRESS.md and HANDOFF.md for Phase 2 completion
Records all six ADR action items as done, activation path for JDK 22,
and done-metric status. Phase 4 and Phase 5 remain open roadmap items.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>